# youbot

./: .gitmodules  README.md
damir/: CMakeLists.txt  package.xml
damir/config/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
damir/config/rviz/: demo.rviz
damir/launch/: full_system.launch  localization.launch  navigation.launch  simulation.launch  visualization.launch
damir/src/navigation/: navigation_node.cpp
